--- a/settings.gradle
+++ b/settings.gradle
@@ -4,3 +4,12 @@ include "applications:movie-fun-app"
 
 include "components:albums"
 include "components:movies"
+
+include "applications:movie-service"
+include "applications:album-service"
+//include 'movie-fun-api'
+include "components:blobstore"
+include "components:movie-fun-api"
+include "components:cf-support"
+
+
