--- a/build.gradle
+++ b/build.gradle
@@ -1,11 +1,14 @@
 buildscript {
     ext {
-        springBootVersion = "2.0.6.RELEASE"
+        springBootVersion = "2.0.8.RELEASE"
         springVersion = "5.0.10.RELEASE"
         hibernateVersion = "5.2.17.Final"
         slf4jVersion = "1.7.25"
         junitVersion = "4.12"
         mysqlVersion = "5.1.40"
+        springCloudVersion = "Finchley.SR2"
+        springCloudSsoVersion = "2.1.3.RELEASE"
+        springSecurityOAuthAutoconfigVersion = "2.1.0.RELEASE"
     }
 
     repositories {
